--- a/html/settings.html
+++ b/html/settings.html
@@ -348,6 +348,11 @@ document.getElementById('select-datetime').addEventListener('change', function()
     }
 });
 
+function reboot() {
+    if (confirm("Are you sure you want to reboot?")) {
+        updateSettings(99);
+    }
+}
 
 // function for sending socket message
 function updateSettings(cmd, a, b) {
