--- a/html/overview.html
+++ b/html/overview.html
@@ -193,8 +193,8 @@ var isTableInit = false;
 
 window.addEventListener('load', onLoad);
 
-// var gateway = `ws://${window.location.hostname}/overview`;
-var gateway = "ws://192.168.10.128/overview"
+var gateway = `ws://${window.location.hostname}/overview`;
+// var gateway = "ws://192.168.10.128/overview"
 var websocket;
 
 function initWebSocket() {
