--- a/html/overview.html
+++ b/html/overview.html
@@ -83,6 +83,7 @@
         <h2>Live Graph</h2>
     </div>
 </body>
+<script src="general.js"></script>
 <script>
 var data = [];
 var lines = [];
@@ -254,38 +255,5 @@ function resizeCanvas() {
 
 window.addEventListener('resize', resizeCanvas);
 
-// update time
-function updateTime(epochTime, use24HourFormat = false) {
-    const date = new Date(epochTime * 1000);
-    let options = { weekday: 'short', month: 'short', day: 'numeric', hour: '2-digit', minute: '2-digit' };
-
-    if (use24HourFormat) {
-        options.hour12 = false;
-    }
-
-    const timeString = date.toLocaleString('en-US', options).replace(/,/g, '');
-    document.getElementById('time').innerText = timeString;
-}
-
-updateTime(Date.now() / 1000);
-setInterval(() => updateTime(Date.now() / 1000), 1000);
-
-
-function adjustContentHeight() {
-        var element = document.getElementById('content');
-        var deviceHeight = window.innerHeight;
-        var elementHeight = element.offsetHeight;
-
-        // Compare element height with device height
-        if (elementHeight < deviceHeight) {
-            element.style.height = deviceHeight - 90 + 'px';
-        }
-    }
-
-    // Call the function when the window is resized
-    window.addEventListener('resize', adjustContentHeight);
-
-    // Call the function initially
-    adjustContentHeight();
 </script>
 </html>
